# Taelja

./: .gitignore  ALGORITHM.md  README.md  cabal.project  taelja.cabal  talja.cabal
.github/workflows/: ci.yml
app/: Main.hs
benchmarks/e_proofs/: horn_example_derived_rw.tstp  horn_example_eq_head.tstp  horn_example_eq_head_inlined.tstp  horn_example_eq_rw_chain.tstp  pure_equational_example.tstp  resolution_example_eq_positive_rewrite.tstp  resolution_example_horn_2unit.tstp  resolution_example_horn_general.tstp  resolution_example_horn_reuse.tstp  resolution_example_horn_reuse_forced.tstp  superposition_example_clausal1.tstp  superposition_example_unit2.tstp  superposition_exercise12_2.tstp
benchmarks/input/: horn_example_eq_head_inlined.p  horn_example_relational_rw.p  krympa_example5_nonparallel.p  pure_equational_example.p  resolution_example_horn_2unit.p  resolution_example_horn_general.p  resolution_example_horn_reuse.p  resolution_example_horn_reuse_forced.p  resolution_example_horn_reuse_n1.p  superposition_example_clausal1.p  superposition_example_nonground_lemma.p  units_only_relational_example.p
benchmarks/output/: krympa_example5_nonparallel.tstp  resolution_example_horn_dag.tstp  resolution_example_horn_reuse_inlined.tstp  resolution_example_horn_reuse_n1.tstp  resolution_example_pqr.tstp  superposition_example_clausal2.tstp  superposition_example_nonground_lemma.tstp  superposition_example_unit1.tstp
benchmarks/vampire_output/: horn_example_relational_rw.tstp  resolution_example_horn_dag.tstp  resolution_example_horn_reuse.tstp  resolution_example_horn_reuse_inlined.tstp  resolution_example_pqr.tstp  superposition_example_nonground_lemma.tstp  units_only_relational_example.tstp
lean/: Main.lean  README.md  TaeljaVerify.lean  lake-manifest.json  lakefile.toml
scripts/: eval.py  taelja2lean.py
src/: Convert.hs  Converter.hs  Debug.hs  Emitter.hs  Helpers.hs  ProofTree.hs  Translate.hs  Translator.hs  Types.hs
test/: Main.hs  run_vampire.sh  test_eq_symmetry.tstp
(+219 files in other folders)
