cabal-version: 3.0
name:          taelja
version:       0.1.0.0
synopsis:      A tool that translates refutation proofs to a readable (pretty) proof format for the Horn clause fragment

common warnings
  ghc-options: -Wall

library
  import:           warnings
  hs-source-dirs:   src
  exposed-modules:
    Types
    Helpers
    Emitter
    ProofTree
    Convert
    Debug
  build-depends:
    base       ^>=4.18,
    containers ^>=0.6,
    mtl        ^>=2.3,
    text       ^>=2.0,
    tptp       ^>=0.1
  default-language: GHC2021

test-suite taelja-tests
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  build-depends:
    base          ^>=4.18,
    bytestring    ^>=0.11,
    deepseq       ^>=1.4,
    text          ^>=2.0,
    attoparsec    ^>=0.14,
    tptp          ^>=0.1,
    tasty         >=1.4,
    tasty-golden  >=2.3,
    taelja
  default-language: GHC2021

executable taelja
  import:         warnings
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:
    base        ^>=4.18,
    text        ^>=2.0,
    attoparsec  ^>=0.14,
    tptp        ^>=0.1,
    taelja
  default-language: GHC2021
